<resources>
    <string name="app_name">NoteExtended</string>
    <string name="showNotesButton">Wyświetl notatki</string>
    <string name="createNoteButton">Stwórz notatkę</string>
    <string name="infoButton">O NoteExtended</string>
    <string name="welcomeText">Witaj w NoteExtended!</string>
    <string name="menuText">Menu</string>
    <string name="createMenuText">Utwórz</string>
    <string name="createTextNoteText">Notatkę tekstową</string>
    <string name="createMapNoteText">Zapis lokalizacji (incoming)</string>
    <string name="textNoteName">Note name</string>
    <string name="typeYourNoteName">Type your note name</string>
    <string name="typeYourNoteContent">Type your note content</string>
    <string name="noteContent">Note content</string>
    <string name="saveYourNote">Save your note</string>
    <string name="note_name_text">Note name:</string>
    <string name="note_type_text">Note type:</string>
    <string name="creation_date_text">Creation date:</string>
    <string name="modification_date_text">Modification date:</string>
    <string name="edit_note_text">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="update_your_note_button">Update Your note</string>
</resources>