<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/vertical_menu">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/menuText"
        android:textSize="35sp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:text="@string/showNotesButton"
        android:textSize="16sp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/showNotesButton"
        style="?android:attr/buttonBarStyle">
    </Button>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:text="@string/createNoteButton"
        android:textSize="16sp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/createNoteButton"
        style="?android:attr/buttonBarStyle">
    </Button>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:text="@string/infoButton"
        android:textSize="16sp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/appInfoButton"
        style="?android:attr/buttonBarStyle">
    </Button>
</LinearLayout>