<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/horizontal_create_text_note">
    <TextView
        android:id="@+id/noteNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/textNoteName"
        android:textSize="25sp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/noteNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/typeYourNoteName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:id="@+id/noteContentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/noteContent"
        android:layout_gravity="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteContentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="150dp"
            android:hint="@string/typeYourNoteContent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveTextNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/saveYourNote"
        android:src="@mipmap/ic_launcher_round"/>
</LinearLayout>
