<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".show.details.ShowNoteDetailActivity"
    android:id="@+id/note_details"
    android:orientation="vertical">

    <Button
        android:id="@+id/edit_note_button"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:padding="10dp"
        android:text="@string/edit_note_text"
        android:textSize="16sp">
    </Button>

    <TextView
        android:id="@+id/note_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/note_name_text"
        android:textSize="25sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/note_content"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/edit_note_button"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/noteContent"
        android:textSize="16sp">
    </TextView>
</RelativeLayout>