<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/horizontal_menu">

    <TextView
        android:id="@+id/menuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/menuText"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/showNotesButton"
        style="?android:attr/buttonBarStyle"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_below="@+id/menuText"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="10dp"
        android:text="@string/showNotesButton"
        android:textSize="16sp">

    </Button>

    <Button
        android:id="@+id/createNoteButton"
        style="?android:attr/buttonBarStyle"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_below="@+id/menuText"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:text="@string/createNoteButton"
        android:textSize="16sp">

    </Button>

    <Button
        android:id="@+id/settingButton"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/showNotesButton"
        android:layout_marginHorizontal="10dp"
        android:text="@string/settingButton"
        android:textSize="16sp">

    </Button>

</RelativeLayout>